--- a/Draw/Controller/Common/CommonUserInfoView.xib
+++ b/Draw/Controller/Common/CommonUserInfoView.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="627269487"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="215299453"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -85,7 +84,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{260, 288}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="318358717"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -96,7 +94,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="396417944"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -105,9 +102,8 @@
 							<object class="IBUILabel" id="396417944">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{68, 46}, {129, 21}}</string>
+								<string key="NSFrame">{{68, 46}, {101, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="349822805"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -132,13 +128,13 @@
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="504840725">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{68, 75}, {38, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="580615044"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -154,11 +150,11 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="345321460">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="824271204">
 									<int key="type">1</int>
 									<double key="pointSize">11</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="595501847">
+								<object class="NSFont" key="IBUIFont" id="985196461">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">11</double>
 									<int key="NSfFlags">16</int>
@@ -170,7 +166,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{108, 74}, {78, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="65130283"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -186,8 +181,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="345321460"/>
-								<reference key="IBUIFont" ref="595501847"/>
+								<reference key="IBUIFontDescription" ref="824271204"/>
+								<reference key="IBUIFont" ref="985196461"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="65130283">
@@ -195,7 +190,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{187, 74}, {63, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="879677637"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -204,9 +198,8 @@
 							<object class="IBUIButton" id="349822805">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{187, 42}, {55, 28}}</string>
+								<string key="NSFrame">{{187.5, 42}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="714977334"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -235,7 +228,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{14, 106}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="810220336"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -249,7 +241,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{14, 195}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="855251072"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -263,7 +254,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 119}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="25945721"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -287,7 +277,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 208}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1040292532"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -311,7 +300,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="968379584"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -341,7 +329,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 238}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -367,7 +354,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{142, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="461986437"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -387,7 +373,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{193, 46}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="504840725"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -400,13 +385,43 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<reference key="IBUIFontDescription" ref="345321460"/>
-								<reference key="IBUIFont" ref="595501847"/>
+								<reference key="IBUIFontDescription" ref="824271204"/>
+								<reference key="IBUIFont" ref="985196461"/>
+							</object>
+							<object class="IBUILabel" id="81759872">
+								<reference key="NSNextResponder" ref="215299453"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{164, 48}, {32, 21}}</string>
+								<reference key="NSSuperview" ref="215299453"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Label</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAAA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">10</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">10</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
 						<string key="NSFrame">{{30, 91}, {260, 288}}</string>
 						<reference key="NSSuperview" ref="627269487"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="102507885"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="337141732">
@@ -418,7 +433,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="349745706"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="337141732"/>
@@ -584,6 +598,14 @@
 					</object>
 					<int key="connectionID">39</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">levelLabel</string>
+						<reference key="source" ref="627269487"/>
+						<reference key="destination" ref="81759872"/>
+					</object>
+					<int key="connectionID">45</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -637,6 +659,7 @@
 							<reference ref="349822805"/>
 							<reference ref="65130283"/>
 							<reference ref="714977334"/>
+							<reference ref="81759872"/>
 						</array>
 						<reference key="parent" ref="627269487"/>
 					</object>
@@ -715,6 +738,11 @@
 						<reference key="object" ref="714977334"/>
 						<reference key="parent" ref="215299453"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">44</int>
+						<reference key="object" ref="81759872"/>
+						<reference key="parent" ref="215299453"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -736,6 +764,7 @@
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="44.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -745,94 +774,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">43</int>
+			<int key="maxID">45</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonUserInfoView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="chatToUserButton">UIButton</string>
-						<string key="chatToUserLabel">UILabel</string>
-						<string key="contentView">UIView</string>
-						<string key="drawToUserButton">UIButton</string>
-						<string key="exploreUserFeedButton">UIButton</string>
-						<string key="followUserButton">UIButton</string>
-						<string key="genderLabel">UILabel</string>
-						<string key="locationLabel">UILabel</string>
-						<string key="mask">UIButton</string>
-						<string key="playWithUserLabel">UILabel</string>
-						<string key="snsTagImageView">UIImageView</string>
-						<string key="statusLabel">UILabel</string>
-						<string key="userName">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="chatToUserButton">
-							<string key="name">chatToUserButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="chatToUserLabel">
-							<string key="name">chatToUserLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="drawToUserButton">
-							<string key="name">drawToUserButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="exploreUserFeedButton">
-							<string key="name">exploreUserFeedButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="followUserButton">
-							<string key="name">followUserButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="genderLabel">
-							<string key="name">genderLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="locationLabel">
-							<string key="name">locationLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mask">
-							<string key="name">mask</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="playWithUserLabel">
-							<string key="name">playWithUserLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="snsTagImageView">
-							<string key="name">snsTagImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statusLabel">
-							<string key="name">statusLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userName">
-							<string key="name">userName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonUserInfoView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
